--- a/package.json
+++ b/package.json
@@ -9,14 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
     "electron": "^1.3.4",
-    "electron-window": "^0.8.1",
-    "express": "^4.14.0",
-    "express-xml-bodyparser": "^0.3.0",
-    "http": "0.0.0",
-    "json": "^9.0.4",
-    "morgan": "^1.7.0"
+    "electron-window": "^0.8.1"
   }
 }
